Redirect and Efficiency Fix
- Change troublesome header redirects to JavaScript alternative
- Remove unused IDs for HTML article editing table
- Fixed logout button and article editing table alignment

--- a/styles/build.css
+++ b/styles/build.css
@@ -560,7 +560,7 @@ a {
 	}
 	#edit_table {
 		margin-left: 37%;
-		width: 40%;
+		width: 44%;
 	}
 	input {
 		width: 2em;
@@ -587,6 +587,9 @@ a {
 	}
 	.button {
 		width: 25%;
+	}
+	#logout_button {
+		margin-left: 50%;
 	}
 	#editArticle {
 		width: 25%;
