--- a/styles/main.css
+++ b/styles/main.css
@@ -98,7 +98,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 8.8%;
+		height: 13.2%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -159,6 +159,10 @@ a {
 	#article_title {
 		width: 160px;
 	}
+	#edit_table {
+		margin-left: 17%;
+		width: 100%;
+	}
 	input {
 		width: 2em;
 		margin-left: 0px;
@@ -205,7 +209,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 7.3%;
+		height: 9.8%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -264,6 +268,10 @@ a {
 	#article_table {
 		margin-left: 38%;
 	}
+	#edit_table {
+		margin-left: 20%;
+		width: 90%;
+	}
 	input {
 		width: 2em;
 		margin-left: 0px;
@@ -306,7 +314,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 7.5%;
+		height: 11%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -365,6 +373,10 @@ a {
 	#article_table {
 		margin-left: 38%;
 	}
+	#edit_table {
+		margin-left: 24%;
+		width: 80%;
+	}
 	input {
 		width: 2em;
 		margin-left: 0px;
@@ -411,7 +423,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 7.6%;
+		height: 11%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -473,6 +485,10 @@ a {
 	#article_table {
 		margin-left: 39%;
 	}
+	#edit_table {
+		margin-left: 24%;
+		width: 80%;
+	}
 	input {
 		width: 2em;
 		margin-left: 0px;
@@ -515,7 +531,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 7.6%;
+		height: 11%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -574,6 +590,10 @@ a {
 	#article_table {
 		margin-left: 42%;
 	}
+	#edit_table {
+		margin-left: 37%;
+		width: 44%;
+	}
 	input {
 		width: 2em;
 		margin-left: 0px;
@@ -599,6 +619,9 @@ a {
 	}
 	.button {
 		width: 25%;
+	}
+	#logout_button {
+		margin-left: 50%;
 	}
 	#editArticle {
 		width: 25%;
@@ -633,7 +656,7 @@ a {
 	#topbar {
 		background-color: black;
 		font-weight: bold;
-		height: 8%;
+		height: 11%;
 		top: 0;
 		position: fixed;
 		width: 100%;
@@ -691,6 +714,10 @@ a {
 	}
 	#article_table {
 		margin-left: 43%;
+	}
+	#edit_table {
+		margin-left: 36%;
+		width: 50%;
 	}
 	input {
 		width: 2em;
@@ -813,6 +840,10 @@ a {
 	#article_table {
 		margin-left: 38%;
 	}
+	#edit_table {
+		margin-left: 32%;
+		width: 35%;
+	}
 	textarea {
 		overflow: auto;
 		height: 100px;
@@ -916,6 +947,10 @@ a {
 	}
 	#article_table {
 		margin-left: 38%;
+	}
+	#edit_table {
+		margin-left: 32%;
+		width: 35%;
 	}
 	textarea {
 		overflow: auto;
